--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     <action selector="AllowBtn:" destination="ha1-Kd-3qW" eventType="touchUpInside" id="c7k-Bl-m2a"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_location_found_.png" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-Hg-ruV">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_location_found.png" translatesAutoresizingMaskIntoConstraints="NO" id="yZP-Hg-ruV">
                                 <rect key="frame" x="67" y="220" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="4ZC-1n-Ieh"/>
@@ -61,6 +61,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="W9e-q6-tpN"/>
                     </view>
+                    <connections>
+                        <outlet property="Allowbtnn" destination="PzL-Jt-nrb" id="eqq-NL-GWJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJF-u6-HN7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -5106,7 +5109,7 @@ AAAAAAAAAAAAAAAAmug
         <image name="map icon.png" width="144" height="144"/>
         <image name="mobile.png" width="37" height="37"/>
         <image name="no_leves_found.png" width="800" height="600"/>
-        <image name="no_location_found_.png" width="800" height="600"/>
+        <image name="no_location_found.png" width="800" height="600"/>
         <image name="office_in.png" width="120" height="120"/>
         <image name="otp.png" width="192" height="192"/>
         <image name="reg.png" width="192" height="192"/>
